--- a/style.css
+++ b/style.css
@@ -3,19 +3,10 @@ body {
     font-family: Arial;
 }
 
-.axis path, .axis line {
-    fill: none;
-    shape-rendering: crispedges;
-    stroke: #000000;
-}
-
 /* Centers all elements with the class "centered" */
 .centered {
     text-align: center;
 }
-
-/* COLUMNS ARE JUST USED TEMPORARILY AND MAY BE REMOVED TO MAKE OUR TOOL MORE VISUALLY 
-APPEALING */
 
 /* Creates a flex container to make 2 columns */
 .container {
@@ -105,6 +96,7 @@ APPEALING */
 }
 
 
+/* Style the map section */
 #map { 
     height: 500px; 
 }
