--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 /* Changes the color of text to be lightblue */
 .blue {
-    color: royalblue;
+    color: #1c39bb;
 }
 
 /* Centers all elements with the class "centered" */
@@ -117,7 +117,7 @@ body {
 .tab {
   overflow: hidden;
   border: 1px solid #ccc;
-  background-color: #f1f1f1;
+  background-color: #87cefa;
 }
 
 /* Style the buttons that are used to open the tab content */
@@ -138,7 +138,7 @@ body {
 
 /* Create an active/current tablink class */
 .tab button.active {
-  background-color: #ccc;
+  background-color: #f0f8ff;
 }
 
 /* Style the tab content */
@@ -164,7 +164,7 @@ img.conn-river {
     filter: hue-rotate(50deg);
 }
 
-/* Rotate northeast class marker to pullmanbrown */
+/* Rotate northeast class marker to cocoabrown */
 img.northeast {
     filter: hue-rotate(180deg);
 }
