--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ img.central {
     filter: hue-rotate(300deg);
 }
 
-/* Style the video */
+/* Style the video dimensions*/
 video {
     width: 1200px; 
     height: 800px; 
