--- a/style.css
+++ b/style.css
@@ -174,8 +174,8 @@ img.central {
     filter: hue-rotate(300deg);
 }
 
-/* Style the video dimensions*/
+/* Style the video aspect ratio*/
 video {
-    width: 1200px; 
-    height: 800px; 
+    width: 1280px; 
+    height: 720px; 
 }
